--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,74 @@
   <!-- Header com imagem -->
   <div class="relative w-full h-screen bg-cover bg-center" style="background-image: url('images/home-image.jpg')">
     <header class="absolute top-0 w-full z-10">
-      <nav class="mx-auto flex items-center justify-center p-6 lg:px-8">
-        <div class="lg:flex lg:gap-x-12">
-          <a href="#" class="text-base font-semibold text-white hover:text-gray-300">Ínicio</a>
-          <a href="#cerimonia" class="text-base font-semibold text-white hover:text-gray-300">Cerimônia</a>
-          <a href="#presentes" class="text-base font-semibold text-white hover:text-gray-300">Lista de presentes</a>
-          <a href="#" class="text-base font-semibold text-white hover:text-gray-300">Recados</a>
-        </div>
-      </nav>
+        <nav class="flex items-center justify-center p-6 lg:px-8">
+            <div class="hidden lg:flex lg:gap-x-12">
+                <a href="#" class="text-base font-semibold text-white hover:text-gray-300">Início</a>
+                <a href="#cerimonia" class="text-base font-semibold text-white hover:text-gray-300">Cerimônia</a>
+                <a href="#presentes" class="text-base font-semibold text-white hover:text-gray-300">Lista de presentes</a>
+                <a href="#" class="text-base font-semibold text-white hover:text-gray-300">Recados</a>
+            </div>
+        </nav>
+        <!-- Botão de menu hamburguer para mobile -->
+        <button id="menuToggle" class="px-8 block text-white lg:hidden justify-between">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+          </svg>
+        </button>
     </header>
-    <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
-      <div class="text-center text-white">
-        <h1 class="text-4xl md:text-6xl font-serif">Thifany e Matheus</h1>
-        <p class="text-lg md:text-2xl mt-2">23 de fevereiro de 2025</p>
+
+    <!-- Menu lateral para mobile -->
+    <div id="sideMenu" class="fixed inset-y-0 left-0 bg-white w-3/4 max-w-sm transform -translate-x-full transition-transform z-20 lg:hidden">
+      <div class="flex justify-between items-center p-6 bg-gray-100 border-b">
+          <button id="menuClose" class="text-gray-800">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+          </button>
       </div>
+      <div class="p-6">
+          <a href="#" class="block text-lg font-semibold text-gray-800 hover:text-gray-500 mb-4 menu-link">Início</a>
+          <a href="#cerimonia" class="block text-lg font-semibold text-gray-800 hover:text-gray-500 mb-4 menu-link">Cerimônia</a>
+          <a href="#presentes" class="block text-lg font-semibold text-gray-800 hover:text-gray-500 mb-4 menu-link">Lista de presentes</a>
+          <a href="#" class="block text-lg font-semibold text-gray-800 hover:text-gray-500 menu-link">Recados</a>
+      </div>
+    </div>
+
+    <!-- Texto central -->
+    <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
+        <div class="text-center text-white">
+            <h1 class="text-4xl md:text-6xl font-serif">Thifany e Matheus</h1>
+            <p class="text-lg md:text-2xl mt-2">23 de fevereiro de 2025</p>
+        </div>
     </div>
   </div>
 
   <!-- Contagem regressiva -->
   <div class="bg-white py-12">
     <div class="text-center">
-      <h2 class="text-2xl font-serif text-gray-700 mb-6">Contagem Regressiva</h2>
-      <div class="flex justify-center gap-4">
-        <div class="flex flex-col items-center bg-rose-500 text-white px-6 py-4 rounded-md w-24">
-          <span id="days" class="text-4xl font-bold">00</span>
-          <span class="text-sm uppercase">Dias</span>
+        <h2 class="text-2xl font-serif text-gray-700 mb-6">Contagem Regressiva</h2>
+        <div class="flex flex-wrap justify-center gap-2">
+            <!-- Dias -->
+            <div class="flex flex-col items-center justify-center bg-rose-500 text-white rounded-md w-20 h-20 md:w-24 md:h-24">
+                <span id="days" class="text-xl font-bold md:text-3xl">00</span>
+                <span class="text-xs uppercase md:text-sm">Dias</span>
+            </div>
+            <!-- Horas -->
+            <div class="flex flex-col items-center justify-center bg-rose-500 text-white rounded-md w-20 h-20 md:w-24 md:h-24">
+                <span id="hours" class="text-xl font-bold md:text-3xl">00</span>
+                <span class="text-xs uppercase md:text-sm">Horas</span>
+            </div>
+            <!-- Minutos -->
+            <div class="flex flex-col items-center justify-center bg-rose-500 text-white rounded-md w-20 h-20 md:w-24 md:h-24">
+                <span id="minutes" class="text-xl font-bold md:text-3xl">00</span>
+                <span class="text-xs uppercase md:text-sm">Minutos</span>
+            </div>
+            <!-- Segundos -->
+            <div class="flex flex-col items-center justify-center bg-rose-500 text-white rounded-md w-20 h-20 md:w-24 md:h-24">
+                <span id="seconds" class="text-xl font-bold md:text-3xl">00</span>
+                <span class="text-xs uppercase md:text-sm">Segundos</span>
+            </div>
         </div>
-        <div class="flex flex-col items-center bg-rose-500 text-white px-6 py-4 rounded-md w-24">
-          <span id="hours" class="text-4xl font-bold">00</span>
-          <span class="text-sm uppercase">Horas</span>
-        </div>
-        <div class="flex flex-col items-center bg-rose-500 text-white px-6 py-4 rounded-md w-24">
-          <span id="minutes" class="text-4xl font-bold">00</span>
-          <span class="text-sm uppercase">Minutos</span>
-        </div>
-        <div class="flex flex-col items-center bg-rose-500 text-white px-6 py-4 rounded-md w-24">
-          <span id="seconds" class="text-4xl font-bold">00</span>
-          <span class="text-sm uppercase">Segundos</span>
-        </div>
-      </div>      
     </div>
   </div>
 
@@ -58,7 +87,7 @@
     <div class="mb-6">
       <img src="./images/floral-dark.svg" alt="Folha" class="w-32 h-32">
     </div>
-    <p class="text-gray-700 text-lg font-serif px-24">
+    <p class="text-gray-600 text-lg leading-relaxed mb-8">
       Estamos muito felizes por esse momento finalmente ter chegado! Para aproveitar e facilitar, fizemos esse site para compartilharmos com vocês detalhes do nosso dia tão especial.
     </p>
   </div>
@@ -93,28 +122,30 @@
   </div>
 
   <!-- Lista de Presentes -->
-  <div id="presentes" class="bg-gray-50 py-16 px-6">
-    <div class="max-w-6xl mx-auto">
-        <h2 class="text-3xl font-serif text-gray-800 mb-8 text-center">Lista de Presentes</h2>
-        <p class="text-gray-600 text-lg mb-6 text-center">
+  <div id="presentes" class="bg-gray-50 py-8 px-4">
+    <div class="max-w-4xl mx-auto">
+        <h2 class="text-3xl font-serif text-gray-800 mb-4 text-center">Lista de Presentes</h2>
+        <p class="text-gray-600 text-base mb-4 text-center">
             Escolha o presente que gostaria de nos dar e clique no botão para presentear. 
             Cada presente representa um pedacinho do nosso sonho juntos.
         </p>
     
         <!-- Grid de presentes -->
-        <div id="presentesGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Os presentes serão listados aqui -->
+        <div id="presentesGrid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-4">
+          <!-- Os presentes serão listados aqui -->
         </div>
     
         <!-- Botão de ver mais -->
-        <div class="text-center mt-8">
+        <div class="text-center mt-6">
             <button id="verMais" class="bg-gray-800 text-white py-2 px-6 rounded-lg hover:bg-gray-900">
                 Ver mais presentes
             </button>
         </div>
     </div>
-</div>
+  </div>
+
   <script src="js/gift-list.js"></script>
   <script src="js/countdown.js"></script>
+  <script src="js/menu-toggle.js"></script>
 </body>
 </html>
