Ajustando layout pra mobile e também ajustando grid de presentes

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     
         <!-- Botão de ver mais -->
         <div class="text-center mt-6">
-            <button id="verMais" class="bg-gray-800 text-white py-2 px-6 rounded-lg hover:bg-gray-900">
+            <button id="verMais" class="bg-rose-500 text-white py-2 px-6 rounded-lg hover:bg-rose-900">
                 Ver mais presentes
             </button>
         </div>
