--- a/src/admin-presentes.html
+++ b/src/admin-presentes.html
@@ -19,7 +19,7 @@
     <div class="bg-white p-6 rounded-lg shadow-md">
       <h2 class="text-xl font-serif mb-6 text-gray-800">Cadastrar Novo Presente</h2>
 
-      <form id="formPresente" class="space-y-6">
+      <form id="formPresente" class="space-y-6" enctype="multipart/form-data">
         <div>
           <label for="nome" class="block text-gray-700 mb-2">Nome do Presente</label>
           <input type="text" id="nome" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-rose-500 focus:border-rose-500" required>
@@ -33,6 +33,11 @@
         <div>
           <label for="imagem" class="block text-gray-700 mb-2">URL da Imagem</label>
           <input type="url" id="imagem" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-rose-500 focus:border-rose-500" placeholder="https://exemplo.com/imagem.jpg">
+        </div>
+
+        <div>
+          <label for="imagemUpload" class="block text-gray-700 mb-2">Ou faça upload de uma imagem</label>
+          <input type="file" id="imagemUpload" class="w-full p-3 border rounded-lg focus:ring-2 focus:ring-rose-500 focus:border-rose-500" accept="image/*">
         </div>
 
         <button type="submit" class="w-full bg-rose-500 text-white py-3 rounded-lg hover:bg-rose-600 transition-colors">
@@ -54,55 +59,87 @@
       const form = document.getElementById('formPresente');
       const listaPresentes = document.getElementById('listaPresentesCadastrados');
 
-      function carregarPresentes() {
-        const presentes = JSON.parse(localStorage.getItem('presentes') || '[]');
-        listaPresentes.innerHTML = presentes.map(presente => `
-          <div class="flex items-center justify-between p-4 bg-gray-50 rounded-lg">
-            <div class="flex items-center gap-4">
-              <img src="${presente.imagem}" alt="${presente.nome}" class="w-16 h-16 object-cover rounded-lg">
-              <div>
-                <h3 class="font-bold text-gray-800">${presente.nome}</h3>
-                <p class="text-gray-600">R$ ${presente.preco.toFixed(2)}</p>
-                ${presente.indisponivel ? `<p class="text-red-500 font-semibold">Indisponível - Escolha: ${presente.metodoPagamento}</p>` : ''}
+      async function carregarPresentes() {
+        try {
+          const response = await fetch('http://localhost:3000/api/presentes');
+          const presentes = await response.json();
+
+          listaPresentes.innerHTML = presentes.map(presente => `
+            <div class="flex items-center justify-between p-4 bg-gray-50 rounded-lg">
+              <div class="flex items-center gap-4">
+                <img src="${presente.imagem}" alt="${presente.nome}" class="w-16 h-16 object-cover rounded-lg">
+                <div>
+                  <h3 class="font-bold text-gray-800">${presente.nome}</h3>
+                  <p class="text-gray-600">R$ ${presente.preco.toFixed(2)}</p>
+                  ${presente.indisponivel ? `<p class="text-red-500 font-semibold">Indisponível - Escolha: ${presente.metodoPagamento}</p>` : ''}
+                </div>
               </div>
+              ${!presente.indisponivel ? `
+              <button 
+                onclick="excluirPresente(${presente.id})"
+                class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors"
+              >
+                Excluir
+              </button>` : ''}
             </div>
-            <button 
-              onclick="excluirPresente(${presente.id})"
-              class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors"
-            >
-              Excluir
-            </button>
-          </div>
-        `).join('');
+          `).join('');
+        } catch (error) {
+          console.error('Erro ao carregar presentes:', error);
+        }
       }
 
-      form.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const presentes = JSON.parse(localStorage.getItem('presentes') || '[]');
-        const novoPresente = {
-          id: Date.now(),
-          nome: document.getElementById('nome').value,
-          preco: parseFloat(document.getElementById('preco').value),
-          imagem: document.getElementById('imagem').value || "https://via.placeholder.com/300"
-        };
-
-        presentes.push(novoPresente);
-        localStorage.setItem('presentes', JSON.stringify(presentes));
-
-        form.reset();
-        carregarPresentes();
-
-        alert('Presente cadastrado com sucesso!');
-      });
-
-      window.excluirPresente = (id) => {
+      // Função para excluir um presente
+      window.excluirPresente = async (id) => {
         if (confirm('Tem certeza que deseja excluir este presente?')) {
-          let presentes = JSON.parse(localStorage.getItem('presentes') || '[]');
-          presentes = presentes.filter(presente => presente.id !== id);
-          localStorage.setItem('presentes', JSON.stringify(presentes));
-          carregarPresentes();
+          try {
+            const response = await fetch(`http://localhost:3000/api/presentes/${id}`, {
+              method: 'DELETE',
+            });
+
+            if (response.ok) {
+              alert('Presente excluído com sucesso!');
+              carregarPresentes();
+            } else {
+              const errorData = await response.json();
+              alert(`Erro ao excluir presente: ${errorData.error}`);
+            }
+          } catch (error) {
+            console.error('Erro ao excluir presente:', error);
+            alert('Erro ao excluir presente. Tente novamente.');
+          }
         }
       };
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const formData = new FormData();
+        formData.append('nome', document.getElementById('nome').value);
+        formData.append('preco', parseFloat(document.getElementById('preco').value));
+        formData.append('imagem', document.getElementById('imagem').value);
+        const imagemUpload = document.getElementById('imagemUpload').files[0];
+        if (imagemUpload) {
+          formData.append('imagemUpload', imagemUpload);
+        }
+
+        try {
+          const response = await fetch('http://localhost:3000/api/presentes', {
+            method: 'POST',
+            body: formData,
+          });
+
+          if (response.ok) {
+            form.reset();
+            carregarPresentes();
+            alert('Presente cadastrado com sucesso!');
+          } else {
+            alert('Erro ao cadastrar presente. Tente novamente.');
+          }
+        } catch (error) {
+          console.error('Erro ao cadastrar presente:', error);
+          alert('Erro ao cadastrar presente. Tente novamente.');
+        }
+      });
 
       carregarPresentes();
     });
