--- a/src/index.html
+++ b/src/index.html
@@ -144,37 +144,101 @@
   </div>
 
   <!-- Modal Overlay -->
-  <div id="modalOverlay" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+  <div id="modalOverlay" class="fixed inset-0 hidden z-50 bg-black bg-opacity-50">
+    <!-- Overlay backdrop com blur -->
+    <div class="fixed inset-0 bg-black/70 backdrop-blur-sm"></div>
+
     <!-- Modal Container -->
-    <div class="bg-white rounded-lg w-11/12 max-w-lg p-6 mx-2 sm:mx-auto">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-bold">Efetuar Pagamento</h2>
-        <button onclick="fecharModal()" class="text-gray-500 hover:text-gray-800 text-2xl">&times;</button>
-      </div>
-      <p class="mb-4 text-gray-700">Escolha uma forma de confirmar seu presente.</p>
+    <div class="fixed inset-0 md:overflow-y-auto">
+      <div class="flex min-h-full items-center justify-center p-4 bg-black/70 backdrop-blur-sm">
+        <div class="bg-white rounded-xl w-11/12 max-w-lg mx-2 sm:mx-auto shadow-2xl relative">
+          <!-- Modal Header -->
+          <div class="p-4 border-b">
+            <div class="flex justify-between items-center">
+              <div>
+                <h2 class="text-2xl font-serif text-gray-800">Efetuar Pagamento</h2>
+                <p class="text-sm text-gray-600 mt-1">Escolha como deseja confirmar seu presente</p>
+              </div>
+              <button onclick="fecharModal()" class="text-gray-400 hover:text-gray-600 transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
+            </div>
+          </div>
 
-      <!-- Opções de pagamento -->
-      <div class="mb-4">
-        <label class="flex items-center mb-2">
-          <input type="radio" name="paymentOption" value="casamento" class="mr-2" id="optionCasamento">
-          Levar no dia do casamento
-        </label>
-        <label class="flex items-center">
-          <input type="radio" name="paymentOption" value="pix" class="mr-2" id="optionPix">
-          Pagar no Pix
-        </label>
-      </div>
+          <!-- Modal Content -->
+          <div id="paymentOptions" class="p-4">
+            <!-- Opções de pagamento principais -->
+            <div id="mainPaymentOptions" class="space-y-4 mb-6">
+              <label class="flex items-center p-4 border rounded-lg cursor-pointer hover:bg-gray-50 transition-colors">
+                <input type="radio" name="paymentOption" value="casamento" class="w-4 h-4 text-rose-500" id="optionCasamento">
+                <div class="ml-3">
+                  <span class="font-medium text-gray-900">Levar no dia do casamento</span>
+                  <p class="text-sm text-gray-500 mt-1">Você poderá entregar o presente pessoalmente no dia da celebração</p>
+                </div>
+              </label>
 
-      <!-- QR Code do Pix (visível apenas se a opção de Pix for escolhida) -->
-      <div id="pixQRCode" class="hidden mb-4">
-        <img src="images/qr_code_pix.png" alt="QR Code Pix" class="w-full max-w-xs mx-auto">
-        <p class="text-center text-gray-600 mt-2">Escaneie o QR Code para realizar o pagamento via Pix.</p>
-      </div>
+              <label class="flex items-center p-4 border rounded-lg cursor-pointer hover:bg-gray-50 transition-colors">
+                <input type="radio" name="paymentOption" value="pix" class="w-4 h-4 text-rose-500" id="optionPix">
+                <div class="ml-3">
+                  <span class="font-medium text-gray-900">Pagar com Pix</span>
+                  <p class="text-sm text-gray-500 mt-1">Transferência instantânea via QR Code ou chave Pix</p>
+                </div>
+              </label>
+            </div>
 
-      <!-- Botão para confirmar a escolha -->
-      <button onclick="confirmarEscolha()" class="w-full bg-rose-500 text-white py-2 px-4 rounded-lg hover:bg-rose-600 mt-4">
-        Confirmar Presente
-      </button>
+            <!-- Opções de pagamento com Pix -->
+            <div id="pixPaymentOptions" class="space-y-4 mb-6 hidden">
+              <label class="flex items-center p-4 border rounded-lg cursor-pointer hover:bg-gray-50 transition-colors">
+                <input type="radio" name="pixOption" value="qr" class="w-4 h-4 text-rose-500" id="optionPixQR">
+                <div class="ml-3">
+                  <span class="font-medium text-gray-900">Pagar com QR Code</span>
+                </div>
+              </label>
+
+              <label class="flex items-center p-4 border rounded-lg cursor-pointer hover:bg-gray-50 transition-colors">
+                <input type="radio" name="pixOption" value="chave" class="w-4 h-4 text-rose-500" id="optionPixChave">
+                <div class="ml-3">
+                  <span class="font-medium text-gray-900">Pagar com chave Pix</span>
+                </div>
+              </label>
+            </div>
+
+            <!-- Informações do Pix QR Code -->
+            <div id="pixQRCodeInfo" class="hidden">
+              <div class="bg-gray-50 rounded-lg py-4 space-y-6">
+                <div class="flex flex-col items-center">
+                  <img src="images/qr-code-pix.jpeg" alt="QR Code Pix" class="mb-2" width="150px" height="150px">
+                  <p class="text-sm text-gray-600 text-center">Escaneie o QR Code para pagar</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Informações da chave Pix -->
+            <div id="pixChaveInfo" class="hidden">
+              <div class="bg-gray-50 rounded-lg p-6 space-y-6">
+                <div>
+                  <p class="text-sm font-medium text-gray-700 mb-2">Chave Pix (e-mail)</p>
+                  <div class="flex">
+                    <input type="text" id="pixChave" value="matheuscarvalho850@gmail.com" readonly class="flex-1 text-sm bg-white border rounded-l-lg px-3 py-2 focus:outline-none">
+                    <button onclick="copiarTexto('pixChave')" class="bg-rose-500 text-white px-4 rounded-r-lg hover:bg-rose-600 transition-colors">
+                      Copiar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal Footer -->
+          <div class="p-4 border-t bg-gray-50">
+            <button onclick="confirmarEscolha()" class="w-full bg-rose-500 text-white py-3 px-4 rounded-lg hover:bg-rose-600 transition-colors font-medium">
+              Confirmar Presente
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
